--- a/proxylinks.html
+++ b/proxylinks.html
@@ -15,14 +15,9 @@
             <div class="title">
                 <a class="title-anchor" href="."></a>
             </div>
-            <p id="thread-name"></p>
+            <p id="thread-name">Proxy Links</p>
         </h1>
-        <h2 id="contents">
-            <div id="preview-text">
-                <div id="send"></div>
-            </div>
-            <div id="texts"></div>
-        </h2>
+        <h2 id="contents"></h2>
         <h2 id="links">
             <div>
                 Made by <a href="https://github.com/entitypengin">EntityPENGIN</a>
